# rental/src/app/services/models/register-user-request.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface RegisterUserRequest {
+  age?: number;
+  email?: string;
+  name?: string;
+  password?: string;
+  surname?: string;
+  username?: string;
+}
